--- a/Front End Mentor/Newbie/2.testimonials-grid-section-main/index.html
+++ b/Front End Mentor/Newbie/2.testimonials-grid-section-main/index.html
@@ -22,7 +22,7 @@
                     <div class="depoiment card1">
                         <div class="header">
                             <img
-                                src="/images/image-daniel.jpg"
+                                src="./images/image-daniel.jpg"
                                 alt=""
                                 class="picture"
                             />
@@ -52,7 +52,7 @@
                     <div class="depoiment card2">
                         <div class="header">
                             <img
-                                src="/images/image-jonathan.jpg"
+                                src="./images/image-jonathan.jpg"
                                 alt=""
                                 class="picture"
                             />
@@ -76,7 +76,7 @@
                     <div class="depoiment card3">
                         <div class="header">
                             <img
-                                src="/images/image-jeanette.jpg"
+                                src="./images/image-jeanette.jpg"
                                 alt=""
                                 class="picture"
                             />
@@ -97,7 +97,7 @@
                     <div class="depoiment card4">
                         <div class="header">
                             <img
-                                src="/images/image-patrick.jpg"
+                                src="./images/image-patrick.jpg"
                                 alt=""
                                 class="picture"
                             />
@@ -125,7 +125,7 @@
             </div>
             <div class="depoiment card5">
                 <div class="header">
-                    <img src="/images/image-kira.jpg" alt="" class="picture" />
+                    <img src="./images/image-kira.jpg" alt="" class="picture" />
                     <div class="depoiment-person">
                         <p class="name">Kira Whittle</p>
                         <p class="verified">Verified Graduate</p>
